--- a/tests/mocks/schemas/edit-with-actions-static.yml
+++ b/tests/mocks/schemas/edit-with-actions-static.yml
@@ -157,7 +157,7 @@ sections:
                 value:
                   dynamic: id
               - name: status
-                target: query
+                target: queryString
                 value:
                   static: active
             targetField: fieldNameThree
@@ -250,7 +250,7 @@ sections:
                   value:
                     dynamic: id
                 - name: status
-                  target: query
+                  target: queryString
                   value:
                     static: 1
 
@@ -589,7 +589,7 @@ sections:
                   value:
                     dynamic: id
                 - name: status
-                  target: query
+                  target: queryString
                   value:
                     static: 1
 
@@ -776,7 +776,7 @@ sections:
                   value:
                     dynamic: id
                 - name: status
-                  target: query
+                  target: queryString
                   value:
                     static: 1
               source:
@@ -795,7 +795,7 @@ sections:
             componentAttributes:
               endpointParameters:
                 - name: id
-                  target: query
+                  target: queryString
                   value:
                     dynamic: userIds
               source:
@@ -843,7 +843,7 @@ sections:
                   value:
                     dynamic: id
                 - name: status
-                  target: query
+                  target: queryString
                   value:
                     static: 1
 
@@ -861,7 +861,7 @@ sections:
                     value:
                       dynamic: id
                   - name: status
-                    target: query
+                    target: queryString
                     value:
                       static: 1
                 dataMapping:
@@ -1013,7 +1013,7 @@ sections:
                     value:
                       dynamic: id
                   - name: status
-                    target: query
+                    target: queryString
                     value:
                       static: 1
                 valuesMapper:
@@ -1102,7 +1102,7 @@ sections:
                     value:
                       dynamic: id
                   - name: status
-                    target: query
+                    target: queryString
                     value:
                       static: 1
                 valuesMapper:
@@ -1367,11 +1367,11 @@ sections:
         value:
           dynamic: statusId
       - name: status
-        target: query
+        target: queryString
         value:
           static: 1
       - name: status
-        target: query
+        target: queryString
         value:
           static:
             id: "string"
@@ -1528,7 +1528,7 @@ sections:
         value:
           dynamic: statusId
       - name: status
-        target: query
+        target: queryString
         value:
           static: 1
     filesTypes:
@@ -1551,11 +1551,11 @@ sections:
         value:
           dynamic: statusId
       - name: status
-        target: query
+        target: queryString
         value:
           static: 1
       - name: status
-        target: query
+        target: queryString
         value:
           static:
             id: string
@@ -1620,7 +1620,7 @@ sections:
         value:
           dynamic: id
       - name: status
-        target: query
+        target: queryString
         value:
           static: 1
     includeDataFrom:
@@ -1848,7 +1848,7 @@ sections:
                 value:
                   dynamic: id
               - name: status
-                target: query
+                target: queryString
                 value:
                   static: 1
       - name: stepsExample
