--- a/tests/mocks/schemas/edit-with-remote-actions.yml
+++ b/tests/mocks/schemas/edit-with-remote-actions.yml
@@ -95,7 +95,7 @@ remoteActions:
       value:
         dynamic: id
     - name: status
-      target: query
+      target: queryString
       mapper: booleanToStatus
       value:
         static: true
@@ -156,7 +156,7 @@ sections:
                 value:
                   dynamic: id
               - name: status
-                target: query
+                target: queryString
                 value:
                   static: active
             targetField: fieldNameThree
@@ -249,7 +249,7 @@ sections:
                   value:
                     dynamic: id
                 - name: status
-                  target: query
+                  target: queryString
                   value:
                     static: 1
 
@@ -588,7 +588,7 @@ sections:
                   value:
                     dynamic: id
                 - name: status
-                  target: query
+                  target: queryString
                   value:
                     static: 1
 
@@ -775,7 +775,7 @@ sections:
                   value:
                     dynamic: id
                 - name: status
-                  target: query
+                  target: queryString
                   value:
                     static: 1
               source:
@@ -794,7 +794,7 @@ sections:
             componentAttributes:
               endpointParameters:
                 - name: id
-                  target: query
+                  target: queryString
                   value:
                     dynamic: userIds
               source:
@@ -842,7 +842,7 @@ sections:
                   value:
                     dynamic: id
                 - name: status
-                  target: query
+                  target: queryString
                   value:
                     static: 1
 
@@ -860,7 +860,7 @@ sections:
                     value:
                       dynamic: id
                   - name: status
-                    target: query
+                    target: queryString
                     value:
                       static: 1
                 dataMapping:
@@ -1012,7 +1012,7 @@ sections:
                     value:
                       dynamic: id
                   - name: status
-                    target: query
+                    target: queryString
                     value:
                       static: 1
                 valuesMapper:
@@ -1101,7 +1101,7 @@ sections:
                     value:
                       dynamic: id
                   - name: status
-                    target: query
+                    target: queryString
                     value:
                       static: 1
                 valuesMapper:
@@ -1366,11 +1366,11 @@ sections:
         value:
           dynamic: statusId
       - name: status
-        target: query
+        target: queryString
         value:
           static: 1
       - name: status
-        target: query
+        target: queryString
         value:
           static:
             id: "string"
@@ -1527,7 +1527,7 @@ sections:
         value:
           dynamic: statusId
       - name: status
-        target: query
+        target: queryString
         value:
           static: 1
     filesTypes:
@@ -1550,11 +1550,11 @@ sections:
         value:
           dynamic: statusId
       - name: status
-        target: query
+        target: queryString
         value:
           static: 1
       - name: status
-        target: query
+        target: queryString
         value:
           static:
             id: string
@@ -1619,7 +1619,7 @@ sections:
         value:
           dynamic: id
       - name: status
-        target: query
+        target: queryString
         value:
           static: 1
     includeDataFrom:
@@ -1847,7 +1847,7 @@ sections:
                 value:
                   dynamic: id
               - name: status
-                target: query
+                target: queryString
                 value:
                   static: 1
       - name: stepsExample
