Agregada prop showMissingProducts a orderItemsSection

--- a/tests/mocks/schemas/edit-with-actions-source.yml
+++ b/tests/mocks/schemas/edit-with-actions-source.yml
@@ -1558,6 +1558,7 @@ sections:
     showPurchasedItems: false
     showPickedItems: true
     showClaimItems: false
+    showMissingProducts: false
     canEditPrice: true
 
   - name: anotherOrderItemsSection
