--- a/tests/mocks/schemas/edit-with-remote-actions.yml
+++ b/tests/mocks/schemas/edit-with-remote-actions.yml
@@ -1562,6 +1562,7 @@ sections:
     showPurchasedItems: false
     showPickedItems: true
     showClaimItems: false
+    showMissingProducts: true
     canEditPrice: true
 
   - name: anotherOrderItemsSection
