--- a/tests/mocks/schemas/monitor.yml
+++ b/tests/mocks/schemas/monitor.yml
@@ -127,6 +127,83 @@ dependencies:
         targetField: fieldNameThree
 
 fields:
+  - name: someCapacityCardOne
+    component: CapacitySlotCard
+    label: some.label.key
+    translateLabel: false
+    mapper: addHashtag
+    actionsModalSize: large
+    source:
+      service: "playground"
+      namespace: "views-demo"
+      method: "list"
+      resolve: false
+    endpointParameters:
+      - name: "status"
+        target: "filter"
+        value:
+          static: "active"
+    actions:
+      - name: testEndpoint
+        type: endpoint
+        callback: refresh
+        componentAttributes:
+          icon: box
+          endpoint:
+            service: serviceName
+            namespace: namespaceName
+            method: methodName
+            resolve: false
+          endpointParameters:
+            - name: id
+              target: path
+              value:
+                dynamic: id
+
+      - name: testLink
+        type: link
+        conditions:
+          showWhen:
+            - - name: isEqualTo
+                field: orderData
+                innerField: status
+                referenceValue: active
+        componentAttributes:
+          path: /test/{id}
+          linkTarget: _self
+          endpointParameters:
+            - name: id
+              target: path
+              value:
+                dynamic: id
+
+      - name: testForm
+        type: form
+        callback: reloadData
+        componentAttributes:
+          modalSize: mobile
+          endpoint:
+            service: serviceName
+            namespace: namespaceName
+            method: methodName
+            resolve: false
+          fields:
+            - name: fieldNameOne
+              component: Input
+            - name: fieldNameTwo
+              component: Switch
+
+    conditions:
+      matchWhen:
+        - - name: isNotEmpty
+            field:
+              - test
+              - tes2
+          - name: isNotEqualTo
+            field: name
+            referenceValueType: static
+            referenceValue: null
+
   - name: someCardOne
     component: BaseCard
     label: some.label.key
@@ -232,7 +309,7 @@ fields:
             component: Text
           - name: otherField
             component: Chip
-            
+
           - name: testChipWithLinkField
             component: Chip
             defaultValue: someValue
@@ -268,7 +345,7 @@ fields:
                   target: query
                   value:
                     static: 1
-                
+
     conditions:
       matchWhen:
         - - name: isEqualTo
