ADD: columnsWidth & columnsQuantityScroll keys in monitor schema root

--- a/tests/mocks/schemas/monitor.yml
+++ b/tests/mocks/schemas/monitor.yml
@@ -352,3 +352,5 @@ fields:
         - - name: isEqualTo
             field: name
             referenceValue: test
+columnsWidth: 25
+columnsQuantityScroll: 4
