--- a/tests/mocks/schemas/edit-with-actions.yml
+++ b/tests/mocks/schemas/edit-with-actions.yml
@@ -264,6 +264,35 @@ sections:
                   value:
                     static: 1
 
+            - name: testActionFour
+              icon: agenda
+              color: blue
+              type: endpoint
+              callback: openModal
+              options:
+                endpoint:
+                  service: id
+                  namespace: user-temporal-password
+                  method: post
+                endpointParameters:
+                  - name: id
+                    target: path
+                    value:
+                      dynamic: id
+                fields:
+                  - name: password
+                    label: login.field.temporaryPassword
+                    component: FieldList
+                    componentAttributes:
+                      direction: horizontal
+                      fields:
+                        - name: temporalPassword
+                          component: Text
+                          componentAttributes:
+                            fontWeight: normal
+                        - name: temporalPassword
+                          component: CopyToClipboardButton
+
       - component: ActionForm
         name: someForm
         icon: iconName
