ADD: modalTitle key in action schema

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -250,6 +250,7 @@ sections:
                   target: path
                   value:
                     dynamic: id
+              modalTitle: testModalTitle
               fields:
                 - name: password
                   label: login.field.temporaryPassword
