add number validation to width

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -443,6 +443,7 @@ sections:
 
           - name: exampleTextWithIcon
             component: Text
+            width: 50
             componentAttributes:
               icon: iconName
               iconColor: colorName
