Change imageFieldName key for imageField, Added imageField to edit select and multiselect, Added imageField to SelectMultilevel

--- a/tests/mocks/schemas/edit-with-actions-source.yml
+++ b/tests/mocks/schemas/edit-with-actions-source.yml
@@ -1090,6 +1090,7 @@ sections:
             component: Select
             componentAttributes:
               translateLabels: true
+              imageField: imageUrl
               options:
                 scope: remote
                 endpoint:
@@ -1107,6 +1108,7 @@ sections:
               parentFilterDefaultValue: 'null'
               canClear: true
               maxLevel: 3
+              imageField: imageUrl
               options:
                 scope: remote
                 endpoint:
