--- a/tests/mocks/schemas/edit-with-sources.yml
+++ b/tests/mocks/schemas/edit-with-sources.yml
@@ -97,6 +97,7 @@ sections:
       component: Multiselect
       componentAttributes:
         translateLabels: false
+        imageField: imageUrl
         options:
           scope: remote
           endpoint:
