--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -434,6 +434,9 @@ sections:
                       - test
                       - name
                     referenceValue: true
+                - - name: includes
+                    field: test
+                    referenceValue: value
 
           - name: descriptionTwo
             component: Textarea
