--- a/tests/mocks/schemas/dashboard-with-links.yml
+++ b/tests/mocks/schemas/dashboard-with-links.yml
@@ -26,6 +26,13 @@ graphs:
     componentAttributes:
       options:
         width: 100%
+      link:
+        path: /test
+        endpointParameters: 
+          - name: status
+            target: path
+            value:
+              dynamic: id
     x: 6
     y: 0
     width: 6
