Added key verifiedAddressField to Location and tests

--- a/tests/mocks/schemas/edit-with-actions.yml
+++ b/tests/mocks/schemas/edit-with-actions.yml
@@ -806,6 +806,7 @@ sections:
                         - - name: isNotEmpty
                             field: order
                   - country
+              verifiedAddressField: address
 
           - name: asyncWrapperExampleOne
             component: AsyncWrapper
