Added behavior to massiveActions and ActionButtons

--- a/tests/mocks/schemas/edit-with-actions.yml
+++ b/tests/mocks/schemas/edit-with-actions.yml
@@ -193,6 +193,9 @@ sections:
             icon: star_light
             color: fizzGreen
             type: link
+            behavior:
+              status: blocked
+              statusMotive: motive
             options:
               target:
                 service: serviceName
